# modu_math

./: .gitignore  AGENTS.md  README.md  db.sqlite3  mb.bat  mb_all.bat  mw.bat  pyproject.toml  setup.ps1
.codex/: config.toml
.githooks/: pre-commit
.tmp/: S3_초등_3_008682.check_report.json  S3_초등_3_008713.build_report.json  S3_초등_3_008714.build_report.json  S3_초등_3_008714.check_report.json  S3_초등_3_008728.recheck_report.json  초6_2_원의넓이_0001.build_report.json  초6_2_원의넓이_0001.tutor.build_report.json  초6_2_원의넓이_0001.v12.build_report.json  초6_2_원의넓이_0002.before.build_report.json  초6_2_원의넓이_0002.v12.build_report.json
docs/: CLEAN_CORE_REPORT.md  CORE_KEEP_LIST.md  DSL_AGENT_GUIDE.md  SOLID_EDITOR_EXISTING_AUDIT.md  SOLID_EDITOR_MANUAL_CHECKLIST.md  SOLID_EDITOR_PARITY_MATRIX.md  WEB_EDITOR_REFACTOR_CHECKLIST.md  design.md  dsl_solvable_v1_2_error_checklist.md  editor-next-parity-checklist.md  editor_konva_migration.md  run_manual_pipeline_24h_guide.md  schema_dslpy format.md  문제해결4단계_작성기준.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
input/: 3rd.hwpx  6rd.hwpx
output/: image_svg_match_manifest.json  image_svg_match_scores.json  image_svg_pixel_match_scores.json
prompts/: condition.md  dsl_agent_system.md  dsl_agent_user_template.md  dsl_agent_user_template_strict.md  dsl_generation_rules.md  manual_problem_pipeline_google.md  manual_problem_pipeline_openai.md
reports/: decouple_semantic_layout_report.json  json_schema_audit_examples_sample_data.json  renderer_optimize_report.json
scratch/: inspect_dsl.py  inspect_space.py  inspect_vision_drafts.py  p260422_001.report.json  p260422_002.report.json  p260422_003.report.json  p260422_004.report.json  p260422_007.report.json  p260422_014.report.json  p260422_015.report.json  p260422_016.report.json  p260422_017.report.json  p260422_018.report.json  p260422_019.report.json  p260422_020.report.json  p260422_021.report.json  p260422_022.report.json  p260422_023.report.json  p260422_024.report.json  p260422_025.report.json  p260422_026.report.json  problem.report.json  repair_dsl.py
scripts/: audit_raw_batch.py  build_dsl_folder.ps1  (+13 more)
(+7279 files in other folders)
