[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modu-math"
version = "0.1.0"
description = "Python DSL library that compiles geometry/problem layouts to semantic JSON and SVG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<6.1",
]

[project.scripts]
modu = "modu_math.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
