[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modu-math"
version = "0.1.0"
description = "Python DSL library that compiles math problems into semantic, layout, renderer JSON contracts and SVG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.0,<5.0",
    "pytest>=8.0.0",
]

[project.scripts]
modu = "modu_math.cli:main"
modu-math = "modu_math.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
